--- a/style.css
+++ b/style.css
@@ -86,6 +86,15 @@ body{
 }
 .portfolio h1{
   color: #82BFD1;
-  text-shadow:2px 2px 5px #F7F789;
+  text-shadow:2px 2px 5px #36414D;
   
+}
+.contact h1{
+  color: #82BFD1;
+  text-shadow:2px 2px 5px #36414D;
+
+}
+.contact{
+  border: 2px solid black;
+
 }
