--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body{
   font-family: "Sriracha", cursive;
   background-color: #F79696;
-  border: 7px dotted #82BFD1;
+  border: 7px solid #82BFD1;
 }
 .container-fluid{
   padding-top:150px;
